[gd_scene load_steps=31 format=3 uid="uid://c2b5a8wa3xoja"]

[ext_resource type="Script" path="res://Player/Scripts/movimento.gd" id="1_kiena"]
[ext_resource type="Texture2D" uid="uid://3l7d1xkbaat7" path="res://Player/Aya Completo.png" id="2_2ortg"]
[ext_resource type="PackedScene" uid="uid://6r0hwy3ijx5f" path="res://GUI/Controles/controlecanvas.tscn" id="2_21c6s"]
[ext_resource type="PackedScene" uid="uid://ixhsleocjpvi" path="res://Player/projetilaya.tscn" id="2_w2x0k"]
[ext_resource type="Texture2D" uid="uid://bfrp2uancgku5" path="res://Player/sprites2.png" id="3_rnmfg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpw"]
atlas = ExtResource("2_2ortg")
region = Rect2(0, 600, 134, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1j0d"]
atlas = ExtResource("2_2ortg")
region = Rect2(147, 600, 134, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0hsb"]
atlas = ExtResource("2_2ortg")
region = Rect2(294, 600, 134, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ichfa"]
atlas = ExtResource("2_2ortg")
region = Rect2(441, 600, 134, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_d34a4"]
atlas = ExtResource("3_rnmfg")
region = Rect2(150, 1000, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7o50"]
atlas = ExtResource("3_rnmfg")
region = Rect2(0, 400, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0oax"]
atlas = ExtResource("3_rnmfg")
region = Rect2(150, 0, 100, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpvxd"]
atlas = ExtResource("3_rnmfg")
region = Rect2(0, 0, 89, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sitf"]
atlas = ExtResource("3_rnmfg")
region = Rect2(0, 200, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofy84"]
atlas = ExtResource("3_rnmfg")
region = Rect2(300, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn2od"]
atlas = ExtResource("3_rnmfg")
region = Rect2(450, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5njld"]
atlas = ExtResource("3_rnmfg")
region = Rect2(600, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0trib"]
atlas = ExtResource("3_rnmfg")
region = Rect2(750, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r06q"]
atlas = ExtResource("3_rnmfg")
region = Rect2(900, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dikv6"]
atlas = ExtResource("3_rnmfg")
region = Rect2(1050, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jentg"]
atlas = ExtResource("3_rnmfg")
region = Rect2(1200, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x28on"]
atlas = ExtResource("3_rnmfg")
region = Rect2(1350, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6iut"]
atlas = ExtResource("3_rnmfg")
region = Rect2(1650, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba6bo"]
atlas = ExtResource("3_rnmfg")
region = Rect2(1800, 0, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfkgm"]
atlas = ExtResource("2_2ortg")
region = Rect2(0, 800, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfgy"]
atlas = ExtResource("2_2ortg")
region = Rect2(150, 800, 150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdupt"]
atlas = ExtResource("2_2ortg")
region = Rect2(300, 800, 150, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_g48ma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1j0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0hsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ichfa")
}],
"loop": false,
"name": &"ataque",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d34a4")
}],
"loop": false,
"name": &"cura",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7o50")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0oax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpvxd")
}],
"loop": true,
"name": &"idle",
"speed": 0.8
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sitf")
}],
"loop": false,
"name": &"jump",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofy84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn2od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5njld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0trib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r06q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dikv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jentg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x28on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6iut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba6bo")
}],
"loop": true,
"name": &"run",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfkgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdupt")
}],
"loop": false,
"name": &"tiro",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeks6"]
size = Vector2(43, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3n7is"]
size = Vector2(38, 87)

[node name="Player" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_index = 4
position = Vector2(159, 114)
script = ExtResource("1_kiena")
projectile_scene = ExtResource("2_w2x0k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 8)
scale = Vector2(0.5, 0.485)
sprite_frames = SubResource("SpriteFrames_g48ma")
animation = &"dash"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="hitboxlamina" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxlamina"]
position = Vector2(0.5, -7)
shape = SubResource("RectangleShape2D_jeks6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_3n7is")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(3, -24)
zoom = Vector2(2, 2)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="ControleTouch" parent="." instance=ExtResource("2_21c6s")]

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="body_entered" from="hitboxlamina" to="." method="_on_hitboxlamina_body_entered"]
